Bug 35728 - various forms.OGridControlModel unoapitests fail
Summary: various forms.OGridControlModel unoapitests fail
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Björn Michaelsen
URL:
Whiteboard: unoapitest
Keywords:
Depends on:
Blocks: Dev-subsequenttest-failures
  Show dependency treegraph
 
Reported: 2011-03-27 16:10 UTC by Björn Michaelsen
Modified: 2011-12-24 04:27 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Michaelsen 2011-03-27 16:10:55 UTC
The unoapi tests
  forms.OGridControlModel::com::sun::star::form::component::GridControl
  forms.OGridControlModel::com::sun::star::beans::XMultiPropertySet
  forms.OGridControlModel::com::sun::star::beans::XPropertySet
  forms.OGridControlModel::com::sun::star::beans::XFastPropertySet
all fail in forms. To reproduce, remove the test from the blacklist at:
 forms/qa/unoapi/knownissues.xcl
and run:
 cd smoketestoo_native && build --all
 cd forms && make -sr subsequentcheck
Comment 1 Björn Michaelsen 2011-05-23 02:49:03 UTC
Fixed with:
http://cgit.freedesktop.org/libreoffice/libs-core/commit/?id=1de9a489367e3bd0f9db6256b320b1224b2f4fa8
Reenabling test with:
http://cgit.freedesktop.org/libreoffice/components/commit/?id=19ed36590e990b5281da9c54bd962031bd56ae82

* various forms.OGridControlModel tests segfaulted
* root cause is the migration to stl containers in DbGridControl
* the old tools container returned the removed pointer or NULL causing no failure
* a signed int was used as index while the functions returned a unsigned int
* the GRID_COLUMN_NOT_FOUND magic value was out of the signed range

leaving bug open as this should be cherry-picked to 3-4 and 3-4-0.
Comment 2 Björn Michaelsen 2011-09-27 02:32:48 UTC
Sorry, the fix link above was to the wrong repo.
Here is the correct link for the fix in core:
http://cgit.freedesktop.org/libreoffice/core/commit/?id=a8d1349bf5d84fc7170a80813d4edcf562184d48
Comment 3 Björn Michaelsen 2011-09-27 07:58:55 UTC
fixed on -3-4 too already.
Comment 4 Björn Michaelsen 2011-12-24 04:27:31 UTC
closing