fdo#35728: fix GridControl crash

* various forms.OGridControlModel tests segfaulted
* root cause is the migration to stl containers in DbGridControl
* the old tools container returned the removed pointer or NULL causing no failure
* a signed int was used as index while the functions returned a unsigned int
* the GRID_COLUMN_NOT_FOUND magic value was out of the signed range